--- a/servers/httpd/lighttpd.conf
+++ b/servers/httpd/lighttpd.conf
@@ -1,45 +1,45 @@
 server.modules              = (
-              "mod_access"
-            , "mod_accesslog"
-            , "mod_alias"
-            , "mod_auth"
-            , "mod_compress"
-            , "mod_evhost"
-            , "mod_proxy"
-            , "mod_status"
-            , "mod_redirect"
-            , "mod_rewrite"
-)
+                                  "mod_access"
+                                , "mod_accesslog"
+                                , "mod_alias"
+                                , "mod_auth"
+                                , "mod_compress"
+                                , "mod_evhost"
+                                , "mod_proxy"
+                                , "mod_status"
+                                , "mod_redirect"
+                                , "mod_rewrite"
+                              )
 
 ## a static document-root, for virtual-hosting take look at the
 ## server.virtual-* options
-server.document-root       = "/var/www/"
+server.document-root        = "/var/www/"
 
 ## where to upload files to, purged daily.
-server.upload-dirs = ( "/var/cache/lighttpd/uploads" )
+server.upload-dirs          = ( "/var/cache/lighttpd/uploads" )
 
 ## where to send error-messages to
-server.errorlog            = "/var/log/lighttpd/error.log"
+server.errorlog             = "/var/log/lighttpd/error.log"
 
 ## files to check for if .../ is requested
-index-file.names           = (   "index.php"
-                               , "index.html"
-                               , "index.htm"
-                               , "default.htm"
-                               , "index.lighttpd.html" )
+index-file.names            = (   "index.php"
+                                , "index.html"
+                                , "index.htm"
+                                , "default.htm"
+                                , "index.lighttpd.html" )
 
 ## Use the "Content-Type" extended attribute to obtain mime type if possible
 # mimetype.use-xattr = "enable"
 
 ## accesslog module
-accesslog.filename         = "/var/log/lighttpd/access.log"
+accesslog.filename          = "/var/log/lighttpd/access.log"
 
 ## deny access the file-extensions
-url.access-deny            = ( "~", ".inc" )
+url.access-deny             = ( "~", ".inc" )
 static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
 
 ## to help the rc.scripts
-server.pid-file            = "/var/run/lighttpd.pid"
+server.pid-file             = "/var/run/lighttpd.pid"
 
 ## virtual directory listings
 dir-listing.encoding        = "utf-8"
@@ -49,14 +49,18 @@ server.dir-listing          = "enable"
 debug.dump-unknown-headers  = "enable"
 
 ## change uid to <uid> (default: don't care)
-server.username            = "www-data"
+server.username             = "www-data"
 
 ## change uid to <uid> (default: don't care)
-server.groupname           = "www-data"
+server.groupname            = "www-data"
 
 #### compress module
 compress.cache-dir          = "/var/cache/lighttpd/compress/"
-compress.filetype           = ("text/plain", "text/html", "application/x-javascript", "text/css")
+compress.filetype           = (   "text/plain"
+                                , "text/html"
+                                , "application/x-javascript"
+                                , "text/css"
+                              )
 
 include_shell "/usr/share/lighttpd/create-mime.assign.pl"
 include_shell "/usr/share/lighttpd/include-conf-enabled.pl"
