Fixing a comma issue with austinpug and adding in interpreters.

--- a/servers/httpd/lighttpd.conf
+++ b/servers/httpd/lighttpd.conf
@@ -3,6 +3,7 @@ server.modules              = (
                                 , "mod_accesslog"
                                 , "mod_alias"
                                 , "mod_auth"
+                                , "mod_cgi"
                                 , "mod_compress"
                                 , "mod_evhost"
                                 , "mod_proxy"
@@ -23,14 +24,23 @@ server.errorlog             = "/var/log/lighttpd/error.log"
 
 ## files to check for if .../ is requested
 index-file.names            = (   "index.php"
+                                , "index.py"
+                                , "index.pl"
                                 , "index.html"
                                 , "index.htm"
                                 , "default.htm"
-                                , "index.lighttpd.html" )
+                                , "index.lighttpd.html"
+                              )
 
 ## Use the "Content-Type" extended attribute to obtain mime type if possible
 # mimetype.use-xattr = "enable"
 
+# CGI Setup for PHP, Perl and Python
+cgi.assign                  = (   ".pl"  => "/usr/bin/perl"
+                                , ".php" => "/usr/bin/php"
+                                , ".py"  => "/usr/bin/python"
+                              )
+                                
 ## accesslog module
 accesslog.filename          = "/var/log/lighttpd/access.log"
 
