FCGI + Austinpug pdjango junk.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -8,6 +8,25 @@ $HTTP["host"] =~ "^(www\.)austinpug\.(com|us|net)$" {
   )
 }
 
+$HTTP["host"] == "pgday.austinpug.org" {
+  fastcgi.server       = ( "/django.fcgi" =>
+                           (
+                                "socket"      => "/var/lib/lighttpd/django-fastcgi.socket"
+                              , "bin-path"    => "/home/austinpug/pgday/bin/startfcgi.sh"
+                              , "check-local" => "disable"
+                              , "max-procs"   => 1
+                           )
+                         )
+  
+  alias.url          +=  (    "/media/"       => "/home/austinpug/pgday/public_html/media"
+                            , "/admin_media/" => "/usr/share/pyshared/django/contrib/admin/media"
+                         )
+  url.rewrite-once    =  (    "^(/media/.*)$" => "$1"
+                            , "^(/registration/.*)$" => "$1"
+                            , "^(/speakers/.*)$"    =>  "$1"
+                            , "^(/admin/.*)$" => "$1"
+                         )
+}
 $HTTP["host"] =~ "austinpug.org" {
   server.document-root = "/home/austinpug/public_html"
   evhost.path-pattern  = "/home/austinpug/%3/public_html"
