--- a/servers/httpd/lighttpd.conf
+++ b/servers/httpd/lighttpd.conf
@@ -3,7 +3,7 @@ server.modules              = (
                                 , "mod_accesslog"
                                 , "mod_alias"
                                 , "mod_auth"
-                                , "mod_cgi"
+                                , "mod_fcgi
                                 , "mod_compress"
                                 , "mod_evhost"
                                 , "mod_proxy"
@@ -35,12 +35,6 @@ index-file.names            = (   "index.php"
 ## Use the "Content-Type" extended attribute to obtain mime type if possible
 # mimetype.use-xattr = "enable"
 
-# CGI Setup for PHP, Perl and Python
-cgi.assign                  = (   ".pl"  => "/usr/bin/perl"
-                                , ".php" => "/usr/bin/php"
-                                , ".py"  => "/usr/bin/python"
-                              )
-                                
 ## accesslog module
 accesslog.filename          = "/var/log/lighttpd/access.log"
 
