--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -25,6 +25,7 @@ $HTTP["host"] == "pgday.austinpug.org" {
                             , "^(/registration/.*)$" => "$1"
                             , "^(/speakers/.*)$"    =>  "$1"
                             , "^(/admin/.*)$" => "$1"
+                            , "^(/.*)$" => "/django.fcgi$1"
                          )
 }
 $HTTP["host"] =~ "austinpug.org" {
