--- a/servers/httpd/lighttpd.conf
+++ b/servers/httpd/lighttpd.conf
@@ -3,7 +3,7 @@ server.modules              = (
                                 , "mod_accesslog"
                                 , "mod_alias"
                                 , "mod_auth"
-                                , "mod_fcgi"
+                                , "mod_fastcgi"
                                 , "mod_compress"
                                 , "mod_evhost"
                                 , "mod_proxy"
