--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -9,9 +9,11 @@ $HTTP["host"] =~ "^(www\.)austinpug\.(com|us|net)$" {
 }
 
 $HTTP["host"] == "pgday.austinpug.org" {
-  fastcgi.server       = ( "/django.fcgi" =>
+
+  fastcgi.server       = ( "/" =>
                            (
-                                "socket"      => "/var/lib/lighttpd/django-fastcgi.socket"
+                                "host"      => "127.0.0.1"
+                              , "port"      => 3033
                               , "bin-path"    => "/home/austinpug/pgday/bin/startfcgi.sh"
                               , "check-local" => "disable"
                               , "max-procs"   => 1
