--- a/servers/httpd/lighttpd.conf
+++ b/servers/httpd/lighttpd.conf
@@ -32,6 +32,7 @@ index-file.names            = (   "index.php"
                                 , "index.lighttpd.html"
                               )
 
+fastcgi.debug = 1
 ## Use the "Content-Type" extended attribute to obtain mime type if possible
 # mimetype.use-xattr = "enable"
 
