--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -10,16 +10,7 @@ $HTTP["host"] =~ "^(www\.)austinpug\.(com|us|net)$" {
 
 $HTTP["host"] == "pgday.austinpug.org" {
 
-  fastcgi.server       = ( "/" =>
-                           (
-                                "host"      => "127.0.0.1"
-                              , "port"      => 3033
-                              , "bin-path"    => "/home/austinpug/pgday/bin/startfcgi.sh"
-                              , "check-local" => "disable"
-                              , "max-procs"   => 1
-                           )
-                         )
-  
+  accesslog.filename = "/var/log/lighttpd/access-austinpug.log"
   alias.url          +=  (    "/media/"       => "/home/austinpug/pgday/public_html/media"
                             , "/admin_media/" => "/usr/share/pyshared/django/contrib/admin/media"
                          )
