Modified the log file setup. Now I use per subdomain, per domain (or User)

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -2,15 +2,20 @@
 # This is the configuration file for the austinpug domain.
 
 $HTTP["host"] =~ "^(www\.)austinpug\.(com|us|net)$" {
-  url.redirect = (
-    "^/(.*)" => "http://www.austinpug.org/$1",
-    ""       => "http://wwww.austinpug.org"
-  )
+
+  accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
+  server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
+  
+  # We want all URLs to go to the meetup page.
+  url.redirect        = (     "^/(.*)" => "http://www.austinpug.org/$1" 
+                            , ""       => "http://wwww.austinpug.org"
+                        )
 }
 
 $HTTP["host"] == "pgday.austinpug.org" {
 
-  accesslog.filename  =  "/var/log/lighttpd/access-austinpug.log"
+  accesslog.filename  =  "/var/log/lighttpd/austinpug/pgday/access.log"
+  server.errorlog     =  "/var/log/lighttpd/austinpug/pgday/error.log"
 
   alias.url          +=  (    "/media/"       => "/home/austinpug/pgday/public_html/media"
                             , "/admin_media/" => "/usr/share/pyshared/django/contrib/admin/media"
@@ -23,6 +28,8 @@ $HTTP["host"] == "pgday.austinpug.org" {
                          )
 }
 $HTTP["host"] =~ "austinpug.org" {
+  accesslog.filename   = "/var/log/lighttpd/austinpug/access.log"
+  server.errorlog      = "/var/log/lighttpd/austinpug/error.log"
   server.document-root = "/home/austinpug/public_html"
   evhost.path-pattern  = "/home/austinpug/%3/public_html"
 }
