--- a/servers/httpd/conf-enabled/domains/jackyyll.conf
+++ b/servers/httpd/conf-enabled/domains/jackyyll.conf
@@ -5,18 +5,22 @@
 # rtv, "any", i, otis
 
 $HTTP["host"] =~ "(^|\.)scumba\.gs$" {
-  server.document-root = "/home/jackyyll/public_html"
+  server.errorlog             = "/var/log/lighttpd/jackyyll/scumba.gs/error.log"
+  accesslog.filename          = "/var/log/lighttpd/jackyyll/scumba.gs/access.log"
+  server.document-root        = "/home/jackyyll/public_html"
 }
 
 $HTTP["host"] == "rtv.scumba.gs" {
-  
+  server.errorlog             = "/var/log/lighttpd/jackyyll/scumba.gs/rtv/error.log"
+  accesslog.filename          = "/var/log/lighttpd/jackyyll/scumba.gs/rtv/access.log"
+
   $HTTP["url"] =~ "^/(j|gfx|icons|smileys|sounds)/(.*)" {
-    proxy.server = (
-      "" => ( (
-        "host" => "127.0.0.1",
-        "port" => 8888
-      ) )
-    )
+    proxy.server              = (
+                                "" => ( (
+                                          "host" => "127.0.0.1"
+                                        , "port" => 8888
+                                      ) )
+                                )
   }
 
   auth.debug                  = 2
@@ -32,9 +36,13 @@ $HTTP["host"] == "rtv.scumba.gs" {
 }
 
 $HTTP["host"] == "i.scumba.gs" {
-  server.document-root = "/home/jackyyll/public_html/i"
+  server.errorlog             = "/var/log/lighttpd/jackyyll/scumba.gs/i/error.log"
+  accesslog.filenam           = "/var/log/lighttpd/jackyyll/scumba.gs/i/access.log"
+  server.document-root        = "/home/jackyyll/public_html/i"
 }
 
 $HTTP["host"] == "otis.scumba.gs" {
+  server.errorlog             = "/var/log/lighttpd/jackyyll/scumba.gs/otis/error.log"
+  accesslog.filenam           = "/var/log/lighttpd/jackyyll/scumba.gs/otis/access.log"
   server.document-root = "/home/otis/public_html"
 }
