--- a/servers/httpd/conf-enabled/domains/webetheshit.com.conf
+++ b/servers/httpd/conf-enabled/domains/webetheshit.com.conf
@@ -2,4 +2,6 @@
 
 $HTTP["host"] =~ "(^|\.)webetheshitdotcom\.com$" {
   server.document-root = "/home/theshit/public_html"
+  server.errorlog      = "/var/log/lighttpd/webetheshitdotcom.com/error.log"
+  accesslog.filenam    = "/var/log/lighttpd/webetheshitdotcom.com/access.log"
 }
