--- a/servers/httpd/conf-enabled/domains/x-zen.cx.conf
+++ b/servers/httpd/conf-enabled/domains/x-zen.cx.conf
@@ -7,17 +7,26 @@ $HTTP["host"] == "triton.x-zen.cx" {
   auth.backend                = "plain"
   auth.backend.plain.userfile = "/home/triton/.lighttpdpassword"    
   server.document-root        = "/home/triton"
+  server.errorlog             = "/var/log/lighttpd/x-zen.cx/triton/error.log"
+  accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/triton/access.log"
 }
 
 $HTTP["host"] == "irc.x-zen.cx" {
   server.document-root        = "/opt/ircd/public_html/"
+  server.errorlog             = "/var/log/lighttpd/x-zen.cx/irc/error.log"
+  accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/irc/access.log"
 }
 
 $HTTP["host"] =~ "^(www\.|)x-zen.cx$" {
   server.document-root        = "/home/xzen/public_html"
+  server.errorlog             = "/var/log/lighttpd/x-zen.cx/error.log"
+  accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/access.log"
+
 }
 
 $HTTP["host"] =~ "x\-zen\.cx" {
   server.documnet-root        = "/home/xzen/public_html"
   evhost.path-pattern         = "/home/xzen/%3/public_html"
+  server.errorlog             = "/var/log/lighttpd/x-zen.cx/other/error.log"
+  accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/other/access.log"
 }
