--- a/servers/httpd/conf-enabled/10-fastcgi.conf
+++ b/servers/httpd/conf-enabled/10-fastcgi.conf
@@ -8,21 +8,29 @@
 server.modules   += ( "mod_fastcgi" )
 
 ## Start an FastCGI server for php (needs the php5-cgi package)
-fastcgi.server    = ( ".php" => 
-	((
-		"bin-path" => "/usr/bin/php-cgi",
-		"socket" => "/tmp/php.socket",
-		"max-procs" => 2,
-		"idle-timeout" => 20,
-		"bin-environment" => ( 
-			"PHP_FCGI_CHILDREN" => "4",
-			"PHP_FCGI_MAX_REQUESTS" => "10000"
-		),
-		"bin-copy-environment" => (
-			"PATH", "SHELL", "USER"
-		),
-		"broken-scriptfilename" => "enable"
-	)),
-  ".py" =>
-   (( "host" => "127.0.0.1", "port" => 3033, "bin-path" => "/home/austinpug/pgday/bin/startfcgi.sh", "check-local" => "disable", "max-procs"   => 1))
+fastcgi.server    = ( 
+											".php" => 
+																((
+																	  "bin-path"       			  => "/usr/bin/php-cgi"
+																	, "socket"         			  => "/tmp/php.socket"
+																	, "max-procs"      		    => 2
+																	, "idle-timeout"   			  => 20
+																	, "bin-environment"			  => ( 
+																	                   					 "PHP_FCGI_CHILDREN" => "4"
+																	                   				 , "PHP_FCGI_MAX_REQUESTS" => "10000"
+																	                   				   )
+																	, "bin-copy-environment"  => (
+																															 "PATH"
+																														 , "SHELL"
+																														 , "USER"
+																															 )
+																  , "broken-scriptfilename" => "enable"
+																))
+										, ".py" =>  (( 
+																	  "host"       						=> "127.0.0.1"
+																	, "port"       						=> 3033
+																	, "bin-path"   						=> "/home/austinpug/pgday/bin/startfcgi.sh"
+																	, "check-local"						=> "disable"
+																	, "max-procs"  						=> 1
+																))
 )
