Updated fastcgi to remove my python settings.
Updated the austin pug configuration file to utilize a fastcgi host string, and I am reconfiguring the fastcgi startup script now.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -23,14 +23,16 @@ $HTTP["host"] == "pgday.austinpug.org" {
 
   accesslog.filename  =  "/var/log/lighttpd/austinpug/pgday/access.log"
   server.errorlog     =  "/var/log/lighttpd/austinpug/pgday/error.log"
-
-  alias.url          +=  (    "/media/"       => "/home/austinpug/pgday/public_html/media"
-                            , "/admin_media/" => "/usr/share/pyshared/django/contrib/admin/media"
-                         )
-  url.rewrite-once    =  (    "^(/media/.*)$" => "$1"
-                            , "^(/registration/.*)$" => "$1"
-                            , "^(/speakers/.*)$"    =>  "$1"
-                            , "^(/admin/.*)$" => "$1"
-                            , "^(/.*)$" => "/.py$1"
-                         )
+  fastcgi.server = (
+      "/austinpug.fcgi" => (
+        "main" => (
+          # Use host / port instead of socket for TCP fastcgi
+          "host" => "127.0.0.1",
+          "port" => 3033,
+          #"socket" => "/home/user/mysite.sock",
+          "check-local" => "disable",
+        )
+      ),
+    )
+  url.rewrite-once    =  ("^(/.*)$" => "/austinpug.fcgi$1")
 }
