fixing some urls for austin.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -7,8 +7,8 @@ $HTTP["host"] =~ "^(www\.)austinpug\.(com|us|net)$" {
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
   
   # We want all URLs to go to the meetup page.
-  url.redirect        = (     "^/(.*)" => "http://www.austinpug.org/$1" 
-                            , ""       => "http://wwww.austinpug.org"
+  url.redirect        = (   "^/(.*)" => "http://www.austinpug.org/$1" 
+                          , ""       => "http://wwww.austinpug.org"
                         )
 }
 
@@ -34,5 +34,16 @@ $HTTP["host"] == "pgday.austinpug.org" {
         )
       ),
     )
-  url.rewrite-once    =  ("^(/.*)$" => "/austinpug.fcgi$1")
+  alias.url          += (   
+                            "/media/"            => "/home/austinpug/pgday/public_html/app/core/static/"
+                          , "/static/"            => "/home/austinpug/pgday/public_html/app/core/static/"
+                          , "/admin_media/"      => "/usr/local/lib/python2.6/dist-packages/django/contrib/admin/media"
+                        )
+  url.rewrite-once    = (   
+                            "^(/media/.*)$"      => "$1"
+                          , "^(/static/.*)$"     => "$1"
+                          , "^(/admin_media/.*)$ => "$1"
+                          , "^(/robots.txt)$"    => "$1"
+                          , "^(/.*)$"            => "/austinpug.fcgi$1"
+                        )
 }
