Updating xzen.cx config in lighttpd.

--- a/servers/httpd/conf-enabled/domains/x-zen.cx.conf
+++ b/servers/httpd/conf-enabled/domains/x-zen.cx.conf
@@ -18,10 +18,30 @@ $HTTP["host"] == "irc.x-zen.cx" {
 }
 
 $HTTP["host"] =~ "^(www\.|)x-zen.cx$" {
-  server.document-root        = "/home/xzen/public_html"
+  server.document-root        = "/home/xzen/xzencx"
   server.errorlog             = "/var/log/lighttpd/x-zen.cx/error.log"
   accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/access.log"
+  fastcgi.server = (
+    "xzencx.fcgi" => (
+      "localhost" => (
+        "bin-path" => "/home/xzen/xzencx/xzencx.fcgi",
+        "socket" => "/tmp/xzencx.sock",
+        "check-local" => "disable",
+        "min-procs" => 2,
+        "max-procs" => 4,
+      )
+    ),
+  )
 
+  alias.url = (
+    "/media/" => "/home/xzen/xzencx/",
+  )
+
+  url.rewrite-once = (
+    "^(/media.*)$" => "$1",
+    "^/favicon\.ico$" => "/media/favicon.ico",
+    "^(/.*)$" => "/xzencx.fcgi$1",
+  )
 }
 
 $HTTP["host"] =~ "x\-zen\.cx" {
