Updating xzen.cx config in lighttpd.

--- a/servers/httpd/conf-enabled/domains/x-zen.cx.conf
+++ b/servers/httpd/conf-enabled/domains/x-zen.cx.conf
@@ -25,7 +25,7 @@ $HTTP["host"] =~ "^(www\.|)x-zen.cx$" {
     "xzencx.fcgi" => (
       "localhost" => (
         "bin-path" => "/home/xzen/xzencx/xzencx.fcgi",
-        "socket" => "/tmp/xzencx.sock",
+        "socket" => "/home/xzen/xzencx.sock",
         "check-local" => "disable",
         "min-procs" => 2,
         "max-procs" => 4,
