Updating xzen.cx config in lighttpd.

--- a/servers/httpd/conf-enabled/domains/x-zen.cx.conf
+++ b/servers/httpd/conf-enabled/domains/x-zen.cx.conf
@@ -17,6 +17,13 @@ $HTTP["host"] == "irc.x-zen.cx" {
   accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/irc/access.log"
 }
 
+$HTTP["host"] =~ "x\-zen\.cx" {
+  server.documnet-root        = "/home/xzen/public_html"
+  evhost.path-pattern         = "/home/xzen/%3/public_html"
+  server.errorlog             = "/var/log/lighttpd/x-zen.cx/other/error.log"
+  accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/other/access.log"
+}
+
 $HTTP["host"] =~ "^(www\.|)x-zen.cx$" {
   server.document-root        = "/home/xzen/xzencx"
   server.errorlog             = "/var/log/lighttpd/x-zen.cx/error.log"
@@ -25,7 +32,7 @@ $HTTP["host"] =~ "^(www\.|)x-zen.cx$" {
     "xzencx.fcgi" => (
       "localhost" => (
         "bin-path" => "/home/xzen/xzencx/xzencx.fcgi",
-        "socket" => "/home/xzen/xzencx.sock",
+        "socket" => "/tmp/xzencx.sock",
         "check-local" => "disable",
         "min-procs" => 2,
         "max-procs" => 4,
@@ -42,11 +49,4 @@ $HTTP["host"] =~ "^(www\.|)x-zen.cx$" {
     "^/favicon\.ico$" => "/media/favicon.ico",
     "^(/.*)$" => "/xzencx.fcgi$1",
   )
-}
-
-$HTTP["host"] =~ "x\-zen\.cx" {
-  server.documnet-root        = "/home/xzen/public_html"
-  evhost.path-pattern         = "/home/xzen/%3/public_html"
-  server.errorlog             = "/var/log/lighttpd/x-zen.cx/other/error.log"
-  accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/other/access.log"
 }
