Updating xzen.cx config in lighttpd.

--- a/servers/httpd/conf-enabled/domains/x-zen.cx.conf
+++ b/servers/httpd/conf-enabled/domains/x-zen.cx.conf
@@ -41,12 +41,20 @@ $HTTP["host"] =~ "^(www\.|)x-zen.cx$" {
   )
 
   alias.url = (
-    "/media/" => "/home/xzen/xzencx/",
+    "/media/" => "/home/xzen/xzencx/media/",
+    "/static/" => "/home/xzen/xzencx/static/",
   )
-
-  url.rewrite-once = (
-    "^(/media.*)$" => "$1",
-    "^/favicon\.ico$" => "/media/favicon.ico",
-    "^(/.*)$" => "/xzencx.fcgi$1",
+  alias.url          += (   
+                            "/media/"            => "/home/austinpug/pgday/public_html/app/core/static/"
+                          , "/static/"            => "/home/austinpug/pgday/public_html/app/core/static/"
+                          , "/admin_media/"      => "/usr/local/lib/python2.6/dist-packages/django/contrib/admin/media"
+                        )
+  url.rewrite-once    = (   
+                            "^(/media/.*)$"      => "$1"
+                          , "^(/static/.*)$"     => "$1"
+                          , "^(/admin_media/.*)$" => "$1"
+                          , "^(/robots.txt)$"    => "$1"
+                          , "^/favicon\.ico$" => "/media/favicon.ico"
+                          , "^(/.*)$" => "/xzencx.fcgi$1"
   )
 }
