Updated austinpug.conf to work. Committing for local pull down and full sync up of remote and local.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -42,7 +42,7 @@ $HTTP["host"] == "pgday.austinpug.org" {
   url.rewrite-once    = (   
                             "^(/media/.*)$"      => "$1"
                           , "^(/static/.*)$"     => "$1"
-                          , "^(/admin_media/.*)$ => "$1"
+                          , "^(/admin_media/.*)$" => "$1"
                           , "^(/robots.txt)$"    => "$1"
                           , "^(/.*)$"            => "/austinpug.fcgi$1"
                         )
