--- a/servers/httpd/conf-enabled/domains/x-zen.cx.conf
+++ b/servers/httpd/conf-enabled/domains/x-zen.cx.conf
@@ -36,10 +36,13 @@ $HTTP["host"] =~ "^(www\.|)x-zen.cx$" {
   alias.url = (
     "/media/" => "/home/xzen/xzencx/media/",
     "/static/" => "/home/xzen/xzencx/static/",
+    "/static/admin/" => "/usr/local/lib/python2.6/dist-packages/django/contrib/admin/media",
   )
+
   url.rewrite-once    = (   
                             "^(/media/.*)$"      => "$1"
                           , "^(/static/.*)$"     => "$1"
+                          , "^(/static/admin/.*)$" => "$1"
                           , "^(/admin_media/.*)$" => "$1"
                           , "^(/robots.txt)$"    => "$1"
                           , "^/favicon\.ico$" => "/media/favicon.ico"
