Adding in the mailman configuration for lists.austinpug.org

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -24,28 +24,64 @@ $HTTP["host"] == "pgday.austinpug.org" {
   accesslog.filename  =  "/var/log/lighttpd/austinpug/pgday/access.log"
   server.errorlog     =  "/var/log/lighttpd/austinpug/pgday/error.log"
   fastcgi.server = (
-      "/austinpug.fcgi" => (
-        "main" => (
-          # Use host / port instead of socket for TCP fastcgi
-          "host" => "127.0.0.1",
-          "port" => 3033,
-          #"socket" => "/home/user/mysite.sock",
-          "check-local" => "disable",
-        )
-      ),
-    )
-  alias.url          += (   
-                            "/media/"            => "/home/austinpug/pgday/public_html/app/core/static/"
-                          , "/static/admin/"     => "/usr/local/lib/python2.6/dist-packages/django/contrib/admin/media"
-                          , "/static/"           => "/home/austinpug/pgday/public_html/app/core/static/"
-                          , "/admin_media/"      => "/usr/local/lib/python2.6/dist-packages/django/contrib/admin/media"
-                        )
-  url.rewrite-once    = (   
-                            "^(/media/.*)$"        => "$1"
-                          , "^(/static/admin/.*)$" => "$1"
-                          , "^(/static/.*)$"       => "$1"
-                          , "^(/admin_media/.*)$"  => "$1"
-                          , "^(/robots.txt)$"      => "$1"
-                          , "^(/.*)$"              => "/austinpug.fcgi$1"
-                        )
+    "/austinpug.fcgi" => (
+      "main" => (
+        # Use host / port instead of socket for TCP fastcgi
+        "host" => "127.0.0.1",
+        "port" => 3033,
+        #"socket" => "/home/user/mysite.sock",
+        "check-local" => "disable",
+      )
+    ),
+  )
+
+  alias.url += (   
+    "/media/"            => "/home/austinpug/pgday/public_html/app/core/static/"
+  , "/static/admin/"     => "/usr/local/lib/python2.6/dist-packages/django/contrib/admin/media"
+  , "/static/"           => "/home/austinpug/pgday/public_html/app/core/static/"
+  , "/admin_media/"      => "/usr/local/lib/python2.6/dist-packages/django/contrib/admin/media"
+  )
+
+  url.rewrite-once  = (   
+    "^(/media/.*)$"        => "$1"
+  , "^(/static/admin/.*)$" => "$1"
+  , "^(/static/.*)$"       => "$1"
+  , "^(/admin_media/.*)$"  => "$1"
+  , "^(/robots.txt)$"      => "$1"
+  , "^(/.*)$"              => "/austinpug.fcgi$1"
+  )
+
+}
+
+$HTTP["host"] == "lists.austinpug.org" {
+
+  accesslog.filename = "/var/log/lighttpd/austinpug/list/access.log"
+  server.errorlog    = "/var/log/lighttpd/austinpug/list/error.log"
+  server.dir-listing = "disable"
+  server.name        = "lists.austinpug.org"
+
+  alias.url += (
+    "/mailman/"          => "/usr/lib/cgi-bin/mailman/"
+    , "/pipermail"       => "/var/lib/mailman/archives/public/"
+    , "/images/mailman/" => "/usr/share/images/mailman/"
+  )
+
+  cgi.assign = (
+    "/admin" => "",
+    "/admindb" => "",
+    "/confirm" => "",
+    "/create" => "",
+    "/edithtml" => "",
+    "/listinfo" => "",
+    "/options" => "",
+    "/private" => "",
+    "/rmlist" => "",
+    "/roster" => "",
+    "/subscribe" => ""
+  )
+
+  url.rewrite = (
+    "^/$" => "/mailman/listinfo"
+    , "^/mailman/$" => "/mailman/listinfo"
+  )
 }
