--- a/servers/httpd/lighttpd.conf
+++ b/servers/httpd/lighttpd.conf
@@ -3,6 +3,7 @@ server.modules              = (
                                 , "mod_accesslog"
                                 , "mod_alias"
                                 , "mod_auth"
+                                , "mod_cgi"
                                 , "mod_fastcgi"
                                 , "mod_compress"
                                 , "mod_evhost"
