Time to start controlling postfix.

--- a/servers/httpd/conf-enabled/domains/x-zen.cx.conf
+++ b/servers/httpd/conf-enabled/domains/x-zen.cx.conf
@@ -35,13 +35,13 @@ $HTTP["host"] =~ "^(www\.|)x-zen.cx$" {
 
   alias.url = (
     "/media/" => "/home/xzen/xzencx/media/",
-    "/static/admin/" => "/usr/local/lib/python2.6/dist-packages/django/contrib/admin/media",
+    "/static_admin/" => "/usr/local/lib/python2.6/dist-packages/django/contrib/admin/media",
     "/static/" => "/home/xzen/xzencx/static/",
   )
 
   url.rewrite-once    = (   
                             "^(/media/.*)$"      => "$1"
-                          , "^(/static/admin/.*)$" => "$1"
+                          , "^(/static_admin/.*)$" => "$1"
                           , "^(/static/.*)$"     => "$1"
                           , "^(/admin_media/.*)$" => "$1"
                           , "^(/robots.txt)$"    => "$1"
