Fixing some postfix stuff, lists.austinpug.org now live, added a git ignore for db files.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -16,7 +16,6 @@ $HTTP["host"] =~ "austinpug.org" {
   accesslog.filename   = "/var/log/lighttpd/austinpug/access.log"
   server.errorlog      = "/var/log/lighttpd/austinpug/error.log"
   server.document-root = "/home/austinpug/public_html"
-  evhost.path-pattern  = "/home/austinpug/%3/public_html"
 }
 
 $HTTP["host"] == "pgday.austinpug.org" {
@@ -80,8 +79,9 @@ $HTTP["host"] == "lists.austinpug.org" {
     "/subscribe" => ""
   )
 
-  url.rewrite = (
+  url.rewrite-once = (
     "^/$" => "/mailman/listinfo"
     , "^/mailman/$" => "/mailman/listinfo"
+    , "^/cgi-bin/mailman/(.*)$" => "/mailman/$1"
   )
 }
