--- a/servers/httpd/conf-enabled/domains/x-zen.cx.conf
+++ b/servers/httpd/conf-enabled/domains/x-zen.cx.conf
@@ -8,19 +8,19 @@ $HTTP["host"] == "triton.x-zen.cx" {
   auth.backend.plain.userfile = "/home/triton/.lighttpdpassword"    
   server.document-root        = "/home/triton"
   server.errorlog             = "/var/log/lighttpd/x-zen.cx/triton/error.log"
-  accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/triton/access.log"
+  accesslog.filename           = "/var/log/lighttpd/x-zen.cx/triton/access.log"
 }
 
 $HTTP["host"] == "irc.x-zen.cx" {
   server.document-root        = "/opt/ircd/public_html/"
   server.errorlog             = "/var/log/lighttpd/x-zen.cx/irc/error.log"
-  accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/irc/access.log"
+  accesslog.filename           = "/var/log/lighttpd/x-zen.cx/irc/access.log"
 }
 
 $HTTP["host"] =~ "^(www\.|)x-zen.cx$" {
   server.document-root        = "/home/xzen/xzencx"
   server.errorlog             = "/var/log/lighttpd/x-zen.cx/error.log"
-  accesslog.filenam           = "/var/log/lighttpd/x-zen.cx/access.log"
+  accesslog.filename           = "/var/log/lighttpd/x-zen.cx/access.log"
   fastcgi.server = (
     "xzencx.fcgi" => (
       "localhost" => (
