--- a/servers/httpd/conf-enabled/domains/jackyyll.conf
+++ b/servers/httpd/conf-enabled/domains/jackyyll.conf
@@ -37,12 +37,12 @@ $HTTP["host"] == "rtv.scumba.gs" {
 
 $HTTP["host"] == "i.scumba.gs" {
   server.errorlog             = "/var/log/lighttpd/jackyyll/scumba.gs/i/error.log"
-  accesslog.filenam           = "/var/log/lighttpd/jackyyll/scumba.gs/i/access.log"
+  accesslog.filename           = "/var/log/lighttpd/jackyyll/scumba.gs/i/access.log"
   server.document-root        = "/home/jackyyll/public_html/i"
 }
 
 $HTTP["host"] == "otis.scumba.gs" {
   server.errorlog             = "/var/log/lighttpd/jackyyll/scumba.gs/otis/error.log"
-  accesslog.filenam           = "/var/log/lighttpd/jackyyll/scumba.gs/otis/access.log"
+  accesslog.filename           = "/var/log/lighttpd/jackyyll/scumba.gs/otis/access.log"
   server.document-root = "/home/otis/public_html"
 }
