Fixed some errors in config.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -23,13 +23,13 @@ $HTTP["host"] == "pgday.austinpug.org" {
   accesslog.filename  =  "/var/log/lighttpd/austinpug/pgday/access.log"
   server.errorlog     =  "/var/log/lighttpd/austinpug/pgday/error.log"
   fastcgi.server = (
-    "/austinpug.fcgi" => (
-      "main" => (
-        # Use host / port instead of socket for TCP fastcgi
-        "host" => "127.0.0.1",
-        "port" => 3033,
-        #"socket" => "/home/user/mysite.sock",
+    "pgday.fcgi" => (
+      "localhost" => (
+        "bin-path" => "/home/austinpug/pgday/pgday.fcgi",
+        "socket" => "/tmp/pgday.sock",
         "check-local" => "disable",
+        "min-procs" => 2,
+        "max-procs" => 4,
       )
     ),
   )
