Fixed some errors in config.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -47,7 +47,7 @@ $HTTP["host"] == "pgday.austinpug.org" {
   , "^(/static/.*)$"       => "$1"
   , "^(/admin_media/.*)$"  => "$1"
   , "^(/robots.txt)$"      => "$1"
-  , "^(/.*)$"              => "/austinpug.fcgi$1"
+  , "^(/.*)$"              => "/pgday.fcgi$1"
   )
 
 }
