Updating austinpug.conf to update with the new fastcgi usage settings.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -74,6 +74,7 @@ $HTTP["host"] == "pgday.austinpug.org" {
     "/media/"            => "/home/austinpug/pgday/public_html/app/core/static/"
   , "/static/"           => "/home/austinpug/pgday/public_html/app/core/static/"
   , "/admin_media/"      => "/usr/local/lib/python2.6/dist-packages/django/contrib/admin/media"
+  , "/"                  => "/home/austinpug/pgday/public_html/"
   )
 
   url.rewrite-once  = (   
@@ -81,7 +82,7 @@ $HTTP["host"] == "pgday.austinpug.org" {
   , "^(/static/.*)$"       => "$1"
   , "^(/admin_media/.*)$"  => "$1"
   , "^(/robots.txt)$"      => "$1"
-  , "^(/.*)$"              => "pgday.fcgi$1"
+  , "^(/.*)$"              => "/pgday.fcgi$1"
   )
 
 }
