Time to revert..

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -1,13 +1,13 @@
 # austin.pug.org
 # This is the configuration file for the austinpug domain.
 
-$HTTP["host"] =~ "^(.*)\.austinpug\.(com|us|net)$" {
+$HTTP["host"] =~ "^([^.]+)\.austinpug\.(com|us|net)$" {
 
   accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
   
   # We want all URLs to go to the meetup page.
-  url.redirect        = (   "^/(.*)" => "http://%1.austinpug.org/$1" 
+  url.redirect        = (   ".*" => "http://%1.austinpug.org$0" 
                           , ""       => "http://%1.austinpug.org"
                         )
 }
