--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -1,28 +1,13 @@
 # austin.pug.org
 # This is the configuration file for the austinpug domain.
 
-$HTTP["host"] =~ "^(www\.|\.)austinpug\.(com|us|net)$" {
+$HTTP["host"] =~ "([^.]+)\.austinpug\.(com|us|net)$" {
 
   accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
   
-  # We want all URLs to go to the meetup page.
-  url.redirect        = (   "^/(.*)" => "http://www.austinpug.org/$1" 
-                          , ""       => "http://www.austinpug.org"
-                        )
+  url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org/$1" )
 }
-
-$HTTP["host"] =~ "^pgday\.austinpug\.(com|us|net)$" {
-
-  accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
-  server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
-  
-  # We want all URLs to go to the meetup page.
-  url.redirect        = (   "^/(.*)" => "http://pgday.austinpug.org/$1" 
-                          , ""       => "http://pgday.austinpug.org"
-                        )
-}
-
 
 $HTTP["host"] =~ "austinpug.org" {
   accesslog.filename   = "/var/log/lighttpd/austinpug/access.log"
