--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -1,7 +1,7 @@
 # austin.pug.org
 # This is the configuration file for the austinpug domain.
 
-$HTTP["host"] =~ "([^.]+)\.austinpug\.(com|us|net)$" {
+$HTTP["host"] =~ "([^.]+\.|)austinpug\.(com|us|net)$" {
 
   accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
