--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -6,7 +6,12 @@ $HTTP["host"] =~ "([^.]+\.|)austinpug\.(com|us|net)$" {
   accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
   
-  url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
+  $HTTP["host"] !~ "(www|)\.austinpug\.(com|us|net)$" {
+    url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
+  }
+
+  url.redirect = ( "^(/.*)$" => "http://www.meetup.com/austinpug$1" )
+  
 }
 
 $HTTP["host"] =~ "austinpug.org" {
