Added static pgday subdomain for all austinpug domains.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -1,16 +1,21 @@
 # austin.pug.org
 # This is the configuration file for the austinpug domain.
 
-$HTTP["host"] =~ "([^.]+\.|)austinpug\.(com|us|net)$" {
+$HTTP["host"] =~ "(www|)\.austinpug\.(com|us|net)$" {
+  
+  accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
+  server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
+    
+  url.redirect = ( "^(/.*)$" => "http://www.meetup.com/austinpug$1" )
+
+}
+
+$HTTP["host"] =~ "([^.]+\.)austinpug\.(com|us|net)$" {
 
   accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
   
-  $HTTP["host"] !~ "(www|)\.austinpug\.(com|us|net)$" {
-    url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
-  }
-
-  url.redirect = ( "^(/.*)$" => "http://www.meetup.com/austinpug$1" )
+  url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
   
 }
 
