Added static pgday subdomain for all austinpug domains.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -85,7 +85,7 @@ $HTTP["host"] == "pgday.austinpug.org" {
 
 }
 
-$HTTP["host"] =~ "(www|)\.austinpug\.(com|us|net)$" {
+$HTTP["host"] =~ "(www|)\.austinpug\.([^.]+)$" {
   
   accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
