Added static pgday subdomain for all austinpug domains.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -90,6 +90,6 @@ $HTTP["host"] =~ "(www\.|)austinpug\.([^.]+)$" {
   accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
     
-  url.redirect = ( "^(/.*)$" => "http://www.meetup.com/austinpug$1" )
+  url.redirect = ( "^(/.*)$" => "http://www.meetup.com/austinpug/" )
 
 }
