Added static pgday subdomain for all austinpug domains.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -1,21 +1,5 @@
 # austin.pug.org
-# This is the configuration file for the austinpug domain.
-
-$HTTP["host"] =~ "([^.]+\.)austinpug\.(com|us|net)$" {
-
-  accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
-  server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
-  
-  url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
-  
-}
-
-$HTTP["host"] =~ "austinpug.org" {
-  accesslog.filename   = "/var/log/lighttpd/austinpug/access.log"
-  server.errorlog      = "/var/log/lighttpd/austinpug/error.log"
-  server.document-root = "/home/austinpug/public_html"
-}
-
+# This is the configuration file for the austinpug domains
 
 $HTTP["host"] == "lists.austinpug.org" {
 
@@ -92,4 +76,13 @@ $HTTP["host"] =~ "(www\.|)austinpug\.([^.]+)$" {
     
   url.redirect = ( "^(/.*)$" => "http://www.meetup.com/austinpug/" )
 
+}
+
+$HTTP["host"] =~ "([^.]+\.)austinpug\.(com|us|net)$" {
+
+  accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
+  server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
+  
+  url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
+  
 }
