--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -83,6 +83,6 @@ $HTTP["host"] =~ "([^.]+\.)austinpug\.(com|us|net)$" {
   accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
   
-  url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
+  url.redirect = ( "^(/.*)$" => "http://%1austinpug.org$1" )
   
 }
