--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -78,11 +78,11 @@ $HTTP["host"] =~ "(www\.|)austinpug\.([^.]+)$" {
 
 }
 
-$HTTP["host"] =~ "([^.]+\.)austinpug\.(com|us|net)$" {
+$HTTP["host"] =~ "([^A-Za-z0-9]+)\.austinpug\.(com|us|net)$" {
 
   accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
   
-  url.redirect = ( "^(/.*)$" => "http://%1austinpug.org$1" )
+  url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
   
 }
