Added static pgday subdomain for all austinpug domains.

--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -36,7 +36,27 @@ $HTTP["host"] == "lists.austinpug.org" {
 }
 
 
-$HTTP["host"] == "pgday.austinpug.org" {
+
+
+$HTTP["host"] =~ "(www\.|)austinpug\.([^.]+)$" {
+  
+  accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
+  server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
+    
+  url.redirect = ( "^(/.*)$" => "http://www.meetup.com/austinpug/" )
+
+}
+
+$HTTP["host"] =~ "([^A-Za-z0-9]+)\.austinpug\.(com|us|net)$" {
+
+  accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
+  server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
+  
+  url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
+  
+}
+
+$HTTP["host"] =~ "pgday\.austinpug\.([^.]+)$" {
 
   accesslog.filename  =  "/var/log/lighttpd/austinpug/pgday/access.log"
   server.errorlog     =  "/var/log/lighttpd/austinpug/pgday/error.log"
@@ -67,22 +87,4 @@ $HTTP["host"] == "pgday.austinpug.org" {
   , "^(/.*)$"              => "/pgday.fcgi$1"
   )
 
-}
-
-$HTTP["host"] =~ "(www\.|)austinpug\.([^.]+)$" {
-  
-  accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
-  server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
-    
-  url.redirect = ( "^(/.*)$" => "http://www.meetup.com/austinpug/" )
-
-}
-
-$HTTP["host"] =~ "([^A-Za-z0-9]+)\.austinpug\.(com|us|net)$" {
-
-  accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
-  server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
-  
-  url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
-  
 }
