--- a/servers/httpd/conf-enabled/domains/austinpug.conf
+++ b/servers/httpd/conf-enabled/domains/austinpug.conf
@@ -35,10 +35,7 @@ $HTTP["host"] == "lists.austinpug.org" {
   )
 }
 
-
-
-
-$HTTP["host"] =~ "(www\.|)austinpug\.([^.]+)$" {
+$HTTP["host"] =~ "www\.austinpug\.(com|us|net)" {
   
   accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
   server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
@@ -47,13 +44,13 @@ $HTTP["host"] =~ "(www\.|)austinpug\.([^.]+)$" {
 
 }
 
-$HTTP["host"] =~ "([^A-Za-z0-9]+)\.austinpug\.(com|us|net)$" {
+$HTTP["host"] =~ "austinpug\.(com|us|net)" {
 
-  accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
-  server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
-  
-  url.redirect = ( "^(/.*)$" => "http://%1.austinpug.org$1" )
-  
+    accesslog.filename  = "/var/log/lighttpd/austinpug/othertld/access.log"
+      server.errorlog     = "/var/log/lighttpd/austinpug/othertld/error.log"
+
+        url.redirect = ( "^(/.*)$" => "http://www.meetup.com/austinpug/" )
+
 }
 
 $HTTP["host"] =~ "pgday\.austinpug\.([^.]+)$" {
